front: architecture  Done

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -1,4 +1,9 @@
 $primary: #FFFFFF
+.avion
+  font-family: prout
+  font-size: 45px
+  &.reacteur
+    color: blue
 
 @import '~bulma/bulma.sass'
 // ADD HERE variables you want to override
