--- a/server/views/users/index.ejs
+++ b/server/views/users/index.ejs
@@ -1,12 +1,11 @@
 <html>
-    <head>
-        <title>Users API</title>
-    </head>
-    <body>
-        <h1>Bonjour <%= firstname %> <%= lastname %></h1>
-        <% if (locals.errors) { %>
-            <div><%= locals.errors %></div>
-        <% } %>
-        <%- include("./form-inscription") %>
-    </body>
+  <head>
+    <title>Users API</title>
+  </head>
+  <body>
+    <h1>Bonjour <%= firstname %> <%= lastname %></h1>
+    <% if (locals.errors) { %>
+    <div><%= locals.errors %></div>
+    <% } %> <%- include("./form-inscription") %>
+  </body>
 </html>
