feat:(style for homepage)

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -1,2 +1,9 @@
 // ADD HERE variables you want to override
 @import '~bulma/bulma.sass'
+@import './pages/homePage.sass'
+
+
+// header config 
+
+.small-height
+  padding: 2%
