refactoring:(organisation de deux Router en fonction de si le mec est log)

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -1,6 +1,7 @@
 // ADD HERE variables you want to override
 @import '~bulma/bulma.sass'
 @import './pages/homePage.sass'
+@import './pages/userPage.sass'
 
 
 // header config 
