--- a/client/src/style/pages/homePage.sass
+++ b/client/src/style/pages/homePage.sass
@@ -1,1 +1,15 @@
+.homepage
+  min-height: calc(100vh - #{$header-height} - #{$footer-height})
+  display: flex
+  align-items: center
 
+.image-background
+  justify-content: flex-end
+  background: url('../../assets/img/loginImage.jpg') no-repeat center/contain
+  background-attachment: fixed
+  background-size: cover
+
+.login-form
+  margin: 0
+  display: flex
+  justify-content: flex-end
