feat(userPage): start style

--- a/client/src/style/pages/userPage.sass
+++ b/client/src/style/pages/userPage.sass
@@ -1,15 +1,9 @@
+.title
+  margin-bottom: 4rem !important
 
 .sidebar
-  background-color: #353b48
   min-height: 100%
-
-  ul
-    padding: 10px 0
-    li
-      padding: 5px 2px
-      margin: 2px 10px
-      a
-        color: #ced6e0
-
-hr
-  margin: 6px 10px
+  border-right: 1px solid #dbdbdb
+  a
+    .is-active
+      background-color: $primary
