--- a/client/src/style/pages/homePage.sass
+++ b/client/src/style/pages/homePage.sass
@@ -1,6 +1,7 @@
 .homepage
   min-height: calc(100vh - #{$header-height} - #{$footer-height})
   display: flex
+  flex-direction: column
   align-items: center
 
 .image-background
