--- a/client/src/style/pages/userPage.sass
+++ b/client/src/style/pages/userPage.sass
@@ -1,9 +1,9 @@
-.title
-  margin-bottom: 4rem !important
+.container
+  padding-top: 3rem
+  border-top: 1px solid #dbdbdb
 
 .sidebar
   min-height: 100%
-  border-right: 1px solid #dbdbdb
   a
     .is-active
       background-color: $primary
