--- a/client/src/style/pages/homePage.sass
+++ b/client/src/style/pages/homePage.sass
@@ -5,7 +5,7 @@
   align-items: center
 
 .image-background
-  justify-content: flex-end
+  justify-content: center
   background: url('../../assets/img/loginImage.jpg') no-repeat center/contain
   background-attachment: fixed
   background-size: cover
