feaat(style): style button and create user page

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -5,6 +5,7 @@ $footer-height: 50px
 
 @import '~bulma/bulma.sass'
 @import './pages/homePage.sass'
+@import './pages/registerPage.sass'
 @import './pages/userPage.sass'
 @import './bulma/card'
 
