c'est le style avec d'autre truc c moche

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -7,6 +7,7 @@ $footer-height: 50px
 @import './pages/homePage.sass'
 @import './pages/registerPage.sass'
 @import './pages/userPage.sass'
+@import './components/profil.sass'
 @import './bulma/card'
 
 // header config
