--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -8,6 +8,7 @@ $footer-height: 50px
 @import './pages/registerPage.sass'
 @import './pages/userPage.sass'
 @import './components/profil.sass'
+@import './components/images.sass'
 @import './bulma/card'
 
 // header config
