--- a/client/src/style/bulma/card.sass
+++ b/client/src/style/bulma/card.sass
@@ -1,9 +1,9 @@
 .card
+  height: fit-content
   width: fit-content
   border-radius: 4px
   padding: 30px 5px
   &-content
-    max-width: 600px
     min-width: 400px
-  &-profil
+  &-fullwidth
     width: auto
