tryin to upload img and data for storage in db

--- a/client/src/style/components/images.sass
+++ b/client/src/style/components/images.sass
@@ -1,5 +1,6 @@
 .images-container
   display: flex
-  justify-content: space-between
+  flex-flow: row wrap
+  justify-content: space-around
 .my-image
   object-fit: cover
