feat(images): user cannow select a profil picture

--- a/client/src/style/components/images.sass
+++ b/client/src/style/components/images.sass
@@ -1,6 +1,19 @@
 .images-container
   display: flex
-  flex-flow: row wrap
-  justify-content: space-around
+  // flex-wrap: wrap
+  justify-content: center
+  align-items: center
 .my-image
   object-fit: cover
+  cursor: pointer
+.placeholder
+  background-color: #eff0f1
+  height: 60px
+  width: 90px
+.col
+  flex-grow: 1
+  margin: 5px
+  text-align: center
+  .img
+    height: 60px
+    width: 90px
