feat(report): report available now

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -9,6 +9,7 @@ $footer-height: 50px
 @import './pages/userPage.sass'
 @import './components/profil.sass'
 @import './components/images.sass'
+@import './components/modal.sass'
 @import './bulma/card'
 
 // header config
