feat:(implementing chat)

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -11,6 +11,7 @@ $footer-height: 50px
 @import './components/images.sass'
 @import './components/modal.sass'
 @import './bulma/card'
+@import './components/chat'
 
 // header config
 
