feat(refacto): profil card for users

--- a/client/src/style/components/profil.sass
+++ b/client/src/style/components/profil.sass
@@ -1,5 +1,8 @@
 .profil
   justify-content: center
 
+.slide
+  padding-bottom: 20px
+
 .liked
   background-color: #ff0490 // elle est ou la DA la ???????? ont met quelle couleur putin
