--- a/client/src/style/components/chat.sass
+++ b/client/src/style/components/chat.sass
@@ -1,9 +1,19 @@
-.chat-sender
+.chat-msg
+  border: gray solid 1px
   text-align: left
-  background-color: #1ac3bb94
+  color: grey
+  & > h1
+    font-weight: bold
+
+.test
+  text-align: right
+
+.chat-sender
   color: grey
 
 .chat-receiver
-  text-align: right
-  background-color: #2ee80c9e
   color: grey
+
+.chat-date
+  font-size: 10px
+  text-align: right
