refacto(searchProfil): design searchableProfil

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -1,5 +1,7 @@
 // ADD HERE variables you want to override
 $primary: #5b96ed
+$primary-light: #eef3fc
+$like: #feecf0
 $header-height: 84px
 $footer-height: 50px
 
@@ -27,3 +29,6 @@ html
 
 .layout-color
   background-color: #f9fcff
+
+.primary-light
+  background-color: $primary-light !important
