--- a/client/src/style/components/profil.sass
+++ b/client/src/style/components/profil.sass
@@ -1,11 +1,26 @@
 .profil
   justify-content: center
+  &-content
+    padding: 1rem 1rem 0 1rem
   &-last-online
     margin-top: 8px
     margin-bottom: 8px
+  &-last-line
+    display: flex
+    align-items: baseline
+    justify-content: space-between
+  &-card
+    width: auto !important
+    padding: 0 5px !important
+    margin: 15px 0px
 
 .slide
   padding-bottom: 20px
 
+.icon
+  margin-right: 0 !important
+.tags
+  margin-bottom: 0 !important
+
 .liked
-  background-color: #ff0490 // elle est ou la DA la ???????? ont met quelle couleur putin
+  background-color: $like
