style(search): change style search

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -14,8 +14,12 @@ $footer-height: 50px
 @import './components/modal.sass'
 @import './bulma/card'
 @import './components/chat'
+@import './components/form.sass'
 
 // header config
+
+.capitalize
+  text-transform: capitalize
 
 html
   background-color: #f9fcff
