fix(match): change chat style

--- a/client/src/style/components/chat.sass
+++ b/client/src/style/components/chat.sass
@@ -19,10 +19,10 @@
   text-align: right
 
 .chat
-  position: fixed
-  bottom: 0
-  width: 55%
-  left: 22.5%
+  height: 650px
+  overflow: auto
+  display: flex
+  flex-direction: column-reverse
 
 .chat-textarea
   border: 3px solid black
