--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -10,6 +10,7 @@ $footer-height: 50px
 @import './pages/registerPage.sass'
 @import './pages/userPage.sass'
 @import './components/profil.sass'
+@import './components/updateProfil.sass'
 @import './components/images.sass'
 @import './components/modal.sass'
 @import './bulma/card'
