--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -18,7 +18,9 @@ $footer-height: 50px
 @import './components/form.sass'
 
 // header config
-
+.navbar
+  z-index: auto
+  
 .capitalize
   text-transform: capitalize
 
