add bulma badge

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -6,6 +6,7 @@ $header-height: 84px
 $footer-height: 50px
 
 @import '~bulma/bulma.sass'
+@import '~bulma-badge/dist/css/bulma-badge.min.css'
 @import './pages/homePage.sass'
 @import './pages/registerPage.sass'
 @import './pages/userPage.sass'
