--- a/client/src/style/components/updateProfil.sass
+++ b/client/src/style/components/updateProfil.sass
@@ -2,3 +2,13 @@
   display: flex
   justify-content: flex-end
   margin-bottom: 15px
+
+.completeProfil
+  border: 2px solid red
+  padding: 15px 0px
+  text-align: center
+  width: 80%
+  margin-left: 10%
+  font-size: 21px
+  font-weight: bold
+  color: red
