feat(notif):all logic implemented  -> socket to do

--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -13,6 +13,7 @@ $footer-height: 50px
 @import './components/profil.sass'
 @import './components/updateProfil.sass'
 @import './components/images.sass'
+@import './components/notifications.sass'
 @import './components/modal.sass'
 @import './bulma/card'
 @import './components/chat'
