--- a/client/src/style/components/profil.sass
+++ b/client/src/style/components/profil.sass
@@ -25,3 +25,18 @@
 
 .liked
   background-color: $like
+
+.bio
+  text-align: left
+  border: 1px solid gray
+  border-radius: 5px
+  padding: 25px 45px
+  width: 80%
+  margin-left: 10%
+
+.sexual_orientation
+  padding-bottom: 25px
+
+.popularity
+  font-size: 10px
+  
