--- a/client/src/style/components/profil.sass
+++ b/client/src/style/components/profil.sass
@@ -3,6 +3,7 @@
   &-content
     padding: 1rem 1rem 0 1rem
   &-last-online
+    line-height: 1.1
     margin-top: 8px
     margin-bottom: 8px
   &-last-line
@@ -13,6 +14,10 @@
     width: auto !important
     padding: 0 5px !important
     margin: 15px 0px
+  &-footer
+    display: flex
+    align-items: center
+    justify-content: space-between
 
 .slide
   padding-bottom: 20px
@@ -27,16 +32,10 @@
   background-color: $like
 
 .bio
-  text-align: left
-  border: 1px solid gray
-  border-radius: 5px
-  padding: 25px 45px
-  width: 80%
-  margin-left: 10%
+  margin-bottom: 1rem
 
 .sexual_orientation
   padding-bottom: 25px
 
 .popularity
   font-size: 10px
-  
