--- a/client/src/style/app.sass
+++ b/client/src/style/app.sass
@@ -23,6 +23,9 @@ $footer-height: 50px
 .navbar
   z-index: auto
 
+.container
+  width: -webkit-fill-available
+
 .capitalize
   text-transform: capitalize
 
