--- a/client/src/style/components/profil.sass
+++ b/client/src/style/components/profil.sass
@@ -21,7 +21,9 @@
 
 .slide
   padding-bottom: 20px
-  // max-width: 200px define good taille
+
+.baseline
+  align-items: baseline
 
 .icon
   margin-right: 0 !important
